--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "cmake/sdl2"]
-	path = cmake/sdl2
-	url = https://gitlab.com/aminosbh/sdl2-cmake-modules.git
+[submodule "vendor/sdl2"]
+	path = vendor/sdl2
+	url = https://github.com/libsdl-org/SDL.git
